<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fi.metropolia.marias.monthgame.MainActivity">

    <TextView
        android:id="@+id/SelectMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SelectMonth" />

    <EditText
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/SelectMonth" />

    <Button
        android:id="@+id/jan"
        android:text="@string/jan"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#8bb7d8"
        android:gravity="start"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="3dp"
        android:textAllCaps="false"
        android:layout_below="@+id/result"
        android:layout_alignLeft="@+id/result"
        android:layout_alignStart="@+id/result" />

    <Button
        android:id="@+id/feb"
        android:text="@string/feb"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#8bb7d8"
        android:gravity="start"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="3dp"
        android:textAllCaps="false"
        android:layout_below="@+id/jan"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/mar"
        android:text="@string/mar"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#8bb7d8"
        android:gravity="start"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="3dp"
        android:textAllCaps="false"
        android:layout_below="@+id/feb"
        android:layout_alignLeft="@+id/feb"
        android:layout_alignStart="@+id/feb" />

    <Button
        android:id="@+id/april"
        android:text="@string/april"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#8bb7d8"
        android:gravity="start"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="3dp"
        android:textAllCaps="false"
        android:layout_below="@+id/mar"
        android:layout_alignLeft="@+id/mar"
        android:layout_alignStart="@+id/mar" />

    <Button
        android:id="@+id/may"
        android:text="@string/may"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#8bb7d8"
        android:gravity="start"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="3dp"
        android:textAllCaps="false"
        android:layout_below="@+id/april"
        android:layout_alignLeft="@+id/april"
        android:layout_alignStart="@+id/april" />

    <Button
        android:id="@+id/jun"
        android:text="@string/jun"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#8bb7d8"
        android:gravity="start"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="3dp"
        android:textAllCaps="false"
        android:layout_below="@+id/may"
        android:layout_alignLeft="@+id/may"
        android:layout_alignStart="@+id/may" />

    <Button
        android:id="@+id/jul"
        android:text="@string/jul"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#8bb7d8"
        android:gravity="start"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="3dp"
        android:textAllCaps="false"
        android:layout_below="@+id/jun"
        android:layout_alignLeft="@+id/jun"
        android:layout_alignStart="@+id/jun" />

    <Button
        android:id="@+id/aug"
        android:text="@string/aug"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#8bb7d8"
        android:gravity="start"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="3dp"
        android:textAllCaps="false"
        android:layout_below="@+id/jul"
        android:layout_alignLeft="@+id/jul"
        android:layout_alignStart="@+id/jul" />

    <Button
        android:id="@+id/sep"
        android:text="@string/sep"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#8bb7d8"
        android:gravity="start"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="3dp"
        android:textAllCaps="false"
        android:layout_below="@+id/aug"
        android:layout_alignLeft="@+id/aug"
        android:layout_alignStart="@+id/aug" />

    <Button
        android:id="@+id/oct"
        android:text="@string/oct"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#8bb7d8"
        android:gravity="start"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="3dp"
        android:textAllCaps="false"
        android:layout_below="@+id/sep"
        android:layout_alignLeft="@+id/sep"
        android:layout_alignStart="@+id/sep" />

    <Button
        android:id="@+id/nov"
        android:text="@string/nov"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#8bb7d8"
        android:gravity="start"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="3dp"
        android:textAllCaps="false"
        android:layout_below="@+id/oct"
        android:layout_alignLeft="@+id/oct"
        android:layout_alignStart="@+id/oct" />
    <Button
        android:id="@+id/dec"
        android:text="@string/dec"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#8bb7d8"
        android:gravity="start"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="3dp"
        android:textAllCaps="false"
        android:layout_below="@+id/nov"
        android:layout_alignLeft="@+id/nov"
        android:layout_alignStart="@+id/nov" />

</RelativeLayout>
